--- a/index.html
+++ b/index.html
@@ -1,1 +1,131 @@
-Hello World
+<!DOCTYPE html>
+
+<html lang="en">
+    <head>
+        <meta charset="utf-8"></meta>
+        <title>Tiffany's Portfolio</title>
+
+        <!-- Boostrap CSS only -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <!-- my css link-->
+        <link rel="stylesheet" type="text/css" href="style.css">
+    </head>
+
+    <body>
+
+        <div id="main">
+            <h1 style="font-weight: bold; font-variant: small-caps;">Tiffany Chen</h1>
+    
+            <!-- <p style="text-align: center; color: gray;"> [this website is a work in progress]</p> -->
+            <!--About Me-->
+            <h3 style="font-weight: 500; color: gray; font-variant: small-caps; text-align: center ;">About Me</h3>
+            <div id="about">
+                <p>
+                    Hi, I'm Tiffany! I am studying Computer Science and Visual Arts at Boston University. 
+                    I love creating and I get super excited about combining code and art together.
+                </p>
+            </div> <!--about end-->
+    
+            <!--Links-->
+            <div class="info">
+                <p>Github: <a href="https://github.com/txcchen">txcchen</a></p>
+                <!-- <p>Resume: </p> -->
+            </div>    
+
+            <hr>
+            <!-- Group Projects-->
+            <div class="row">
+                <h3 style="font-weight: 500; color: gray; font-variant: small-caps; text-align: center;">Projects</h3>
+                <p style="text-align: center; color: gray;"> some projects I worked on</p>
+
+                <!--Project Game Jam-->
+                <div class="row">
+                    <div class = "col-lg-3 info" style="height: 150px;">
+                        <h5>Slice of Jam 2023 - BABEL</h5>
+                        <p> Oct - Dec 2022
+                        <br> <a href="https://splitsuns.itch.io/babel">Itch.io</a>
+                        </p>
+                    </div>
+                    <div class="col-lg-9">
+                        <p style="font-variant: small-caps;">Programmer, Artist</p>
+                        <p>
+                            Worked in a team of 5 for Northeastern University's Slice of Jam Game Jam 2023 (48 hours). 
+                            Programmed the story and art, including adding in sound and other effects in Ren'Py.
+                            Designed and drew character sprites. 
+                        </p>
+                    </div> 
+                </div><!--Project Game Jam-->
+                <hr>
+
+                <!--Project 1-->
+                <div class="row">
+                    <div class = "col-lg-3 info" style="height: 150px;">
+                        <h5>GiftMe! Mobile App Development Practicum</h5>
+                        <p> Oct - Dec 2022
+                        <br> <a href="https://github.com/AlAuB/GiftMe/tree/dev">Github</a>
+                        </p>
+                    </div>
+                    <div class="col-lg-9">
+                        <p style="font-variant: small-caps;">Developer</p>
+                        <p>
+                            Designed and built an android app in a team of 6 to allow users to create and share wishlists with friends,
+                            interact with friends' wishlists and provide feedback to other friends. The goal is a wishlist app that is simple and 
+                            intuitive to use, focusing on the feature of "claiming" an item in the wishlist and having other viewers see the claimed status.
+                        </p>
+                    </div> 
+                </div><!--Project 1 end-->
+
+                <hr>
+                <!--Project 2-->
+                <div class="row">
+                    <div class = "col-lg-3 info" style="height: 150px;">
+                        <h5>Councillor Worrell x Small Businesses Spark! Project </h5>
+                        <p> Oct - Dec 2022
+                        <br> <a href="https://github.com/BU-Spark/ds-councilor-worrell-small-business/tree/dev/fall22-team-2">Github</a>
+                        </p>
+                    </div>
+                    <div class="col-lg-9">
+                        <p style="font-variant: small-caps;">Data Analyst</p>
+                        <p>
+                            Collaborated with a team of 4 to analyze BPDA, City of Boston MBE and relevant datasets using Pandas and GeoPandas 
+                            to understand the current landscape of small businesses in Boston District 4, 
+                            determine current issues small businesses face and ways to attract small businesses to District 4.
+                            We identified barriers and successes of District 4 in comparison to other districts, 
+                            as well as reasonable benchmarks for small businesses and submitted a written report to City Councilor Worrell.
+                        </p>
+                    </div> 
+                </div><!--Project 2 end-->
+
+
+                <hr>
+                <!--Project 3-->
+                <div class="row">
+                    <div class = "col-lg-3 info" style="height: 150px;">
+                        <h5>Custom Website</h5>
+                        <p> Nov - Dec 2021
+                        <br> <a href="https://cs-people.bu.edu/tchen556/character_page.html">Sample</a>
+                        </p>
+                    </div>
+                    <div class="col-lg-9">
+                        <p style="font-variant: small-caps;">Developer</p>
+                        <p>
+                            Worked in a team of 2 to design and code a website from scratch. We made a mock entertainment company website based off 
+                            our original characters. 
+                        </p>
+                    </div> 
+                </div><!--Project 3 end-->
+
+
+            </div> <!--Projects end-->
+
+        </div> <!--main end-->
+
+    </body>
+
+    <footer>
+        <!--Copyright/Credit Statement-->
+        ©Tiffany X. Chen. All Rights Reserved.
+    </footer>
+
+
+</html>
