main page update

--- a/index.html
+++ b/index.html
@@ -27,9 +27,8 @@
             <h6 style="text-transform: uppercase;"> Software/Web Developer & Artist</h6>
             <div id="about">
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                    Pretium viverra suspendisse potenti nullam ac tortor. Odio euismod lacinia at quis. 
-                    Interdum posuere lorem ipsum dolor sit amet consectetur adipiscing. Est sit amet facilisis magna.
+                    I graduated from Boston University with a B.A. in Computer Science in May 2023.
+                    A large part of my day is spent clickety-clacketing away at my computer coding personal projects.  
                 </p>
             </div> <!--about end-->
     
