added individual project sites

--- a/project_pages_template.html
+++ b/project_pages_template.html
@@ -22,8 +22,15 @@
 
             <!--About-->
 
-            <h1 style="font-weight: bold; font-variant: small-caps; color: #B1647A">Project Title</h1>
-            <h6 style="text-transform: uppercase;"> Type of Project: Game</h6>
+            <!--heading-->
+            <h1 style="font-weight: bold; font-variant: small-caps; color: #B1647A" class="heading">Project Title
+
+                <a href="index.html" class="btn btn-lg btnLink">
+                    <span class="icon"><i class="fa-solid fa-house isPink float-right"></i> </span>
+                    <span class="btnText">Home</span>
+                </a>
+            </h1>
+            <h6 style="color: #1D1E26;" class="shortdes"> Type of Project: Game</h6>
             <div> <!-- short descr-->
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
@@ -34,9 +41,15 @@
             <!--Links-->
             <!--add in some icons-->
             <div class="info">
-                    <a href="https://github.com/txcchen"><i class="fa-brands fa-square-github isPink"></i></a>
-                    <a href="mailto: tchen556@bu.edu"><i class="fa-solid fa-envelope isPink"></i></a>
-                  </span>
+                <a href="https://github.com/txcchen" class="btn btn-lg btnLink">
+                    <span class="icon"><i class="fa-brands fa-square-github isPink"></i> </span>
+                    <span class="btnText">My Github</span>
+                </a>
+
+                <a href="mailto: tchen556@bu.edu" class="btn btn-lg btnLink">
+                    <span class="icon"><i class="fa-solid fa-envelope isPink"></i> </span>
+                    <span class="btnText">Contact Me!</span>
+                </a>
             </div>   
            
             <hr>
@@ -46,7 +59,7 @@
             <hr>
             <!--More Description-->
             <h3>About This Project</h3>
-            <h6 style="text-transform: uppercase;"> my role</h6>
+            <h6 class="desLabel isPink"> Designer & Developer</h6>
 
             <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
                 Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
