toyhouse codes update

--- a/index.html
+++ b/index.html
@@ -149,7 +149,11 @@
                     </div>
                     </div>
                     <!--ProjectEnd-->
+                </div> <!--row 1 end-->
 
+
+                <!-- row 2-->
+                <div class = "row">
                     <!--Project-->
                     <div class = "col-sm-4">
                         <div class = "project">
@@ -165,12 +169,10 @@
                         </div>
                     </div>
                     <!--Project End-->
-                </div> <!--row 1 end-->
+
+                </div> <!-- row 2 end-->
 
 
-                </div> <!--row 1 end-->
-
-            </div> <!-- column end-->
             <!--Projects end-->
 
         </div> <!--main end-->
@@ -188,6 +190,7 @@
         document.getElementById("babel").addEventListener("click", function (){openPage("babel");});
         document.getElementById("giftme").addEventListener("click", function (){openPage("giftme");});
         document.getElementById("odyssea").addEventListener("click", function (){openPage("odyssea");});
+        document.getElementById("toyhouse").addEventListener("click", function (){openPage("toyhouse");});
 
         
         function openPage(pgName) {
