--- a/index.html
+++ b/index.html
@@ -138,9 +138,9 @@
                     <div class = "col-sm-4">
                     <div class = "project">
                         <div class="card" id = "toyhouse">
-                            <img src="toyhouse/toyhousecode_sample.PNG" class="card-img-top" alt="ToyhouseCode Sample Screenshot">
+                            <img src="toyhouse/user_simple.PNG" class="card-img-top" alt="ToyhouseCode Sample Screenshot">
                             <div class="card-body">
-                                <h5 class="card-title">Character Profiles</h5>
+                                <h5 class="card-title">User & Character Profiles</h5>
                                 <h6 class="card-text shortdes">Toyhouse Codes</h6>
                                 <p class="card-text">Various profile and character codes for my characters on Toyhou.se, a character repository.
                             </p>
