--- a/toyhouse.html
+++ b/toyhouse.html
@@ -23,13 +23,13 @@
             <!--About-->
 
             <!--heading-->
-            <h1 style="font-weight: bold; font-variant: small-caps; color: #B1647A" class="heading">Toyhouse Profiles
+            <h1 style="font-weight: bold; font-variant: small-caps; color: #B1647A" class="heading">User & Character Profiles 
                 <a href="index.html" class="btn btn-lg btnLink">
                     <span class="icon"><i class="fa-solid fa-house isPink float-right"></i> </span>
                     <span class="btnText">Home</span>
                 </a>
             </h1>
-            <h6 style="color: #1D1E26;" class="shortdes"> Toyhouse Character and User Profiles</h6>
+            <h6 style="color: #1D1E26;" class="shortdes"> Toyhouse Profile Codes</h6>
             <h6 style="color: #1D1E26;" class="shortdes"> 2021 - PRESENT</h6>
             <div> <!-- short descr-->
                 <p>
