--- a/toyhouse.html
+++ b/toyhouse.html
@@ -44,7 +44,7 @@
             <!--add in some icons-->
             <div class="info">
                 <a href="https://toyhou.se/" class="btn btn-lg btnLink">
-                    <span class="icon"><i class="fa-brands fa-itch-io isPink"></i> </span>
+                    <span class="icon"><i class="fa-solid fa-users-rectangle"></i> </span>
                     <span class="btnText">TH</span>
                 </a>
 
