--- a/index.html
+++ b/index.html
@@ -105,6 +105,21 @@
                     <!--Project-->
                     <div class = "col-sm-4">
                         <div class = "project">
+                            <div class="card" id = "calculator">
+                                <img src="calculator/calculators_preview.jpg" class="card-img-top rounded" alt="calculators preview">
+                                <div class="card-body">
+                                    <h5 class="card-title">Simple Calculator</h5>
+                                    <h6 class="card-text shortdes">Personal Exploration</h6>
+                                    <p class="card-text">Simple calculators designed for fun and for experimentation. Can be used for simple computations. </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!--ProjectEnd-->
+
+                    <!--Project-->
+                    <div class = "col-sm-4">
+                        <div class = "project">
                             <div class="card" id = "babel">
                                 <img src="babel/babel_titlescreen.PNG" class="card-img-top rounded" alt="babel titlescreen screenshot">
                                 <div class="card-body">
@@ -134,26 +149,27 @@
                     </div>
                     <!--Project End-->
 
-                    <!--Project-->
-                    <div class = "col-sm-4">
-                    <div class = "project">
-                        <div class="card" id = "toyhouse">
-                            <img src="toyhouse/user_simple.PNG" class="card-img-top" alt="ToyhouseCode Sample Screenshot">
-                            <div class="card-body">
-                                <h5 class="card-title">User & Character Profiles</h5>
-                                <h6 class="card-text shortdes">Toyhouse Codes</h6>
-                                <p class="card-text">Various profile and character codes for my characters on Toyhou.se, a character repository.
-                            </p>
-                            </div>
-                            </div>
-                    </div>
-                    </div>
-                    <!--ProjectEnd-->
                 </div> <!--row 1 end-->
 
 
                 <!-- row 2-->
                 <div class = "row">
+                    <!--Project-->
+                    <div class = "col-sm-4">
+                        <div class = "project">
+                            <div class="card" id = "toyhouse">
+                                <img src="toyhouse/user_simple.PNG" class="card-img-top" alt="ToyhouseCode Sample Screenshot">
+                                <div class="card-body">
+                                    <h5 class="card-title">User & Character Profiles</h5>
+                                    <h6 class="card-text shortdes">Toyhouse Codes</h6>
+                                    <p class="card-text">Various profile and character codes for my characters on Toyhou.se, a character repository.
+                                </p>
+                                </div>
+                                </div>
+                        </div>
+                    </div>
+                    <!--ProjectEnd-->
+
                     <!--Project-->
                     <div class = "col-sm-4">
                         <div class = "project">
@@ -191,6 +207,7 @@
         document.getElementById("giftme").addEventListener("click", function (){openPage("giftme");});
         document.getElementById("odyssea").addEventListener("click", function (){openPage("odyssea");});
         document.getElementById("toyhouse").addEventListener("click", function (){openPage("toyhouse");});
+        document.getElementById("calculator").addEventListener("click", function (){openPage("calculator");});
 
         
         function openPage(pgName) {
