added [Workshop] to porfolio

--- a/giftme.html
+++ b/giftme.html
@@ -11,7 +11,8 @@
         <script src="https://kit.fontawesome.com/3e81c20759.js" crossorigin="anonymous"></script>
         <!-- my css link-->
         <link rel="stylesheet" type="text/css" href="page_style.css">
-
+       <!-- animate.css -->
+       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
         <!--font options: https://fonts.google.com/
         https://fonts.google.com/specimen/Nunito-->
     </head>
@@ -90,8 +91,8 @@
             <h6 class="desLabel isPink"> Features</h6>
             <p>Some features I worked on that allows the user to interact with the wishlists and items.</p>
             <div class = "align-center">
-                <iframe src="https://drive.google.com/file/d/1QHgdroUNSvh8UGWXZgr-vDEMcQjUbpQ8/preview" width="640" height="480" allow="autoplay"></iframe>
-                <iframe src="https://drive.google.com/file/d/10moVx2ChqLl3K_fAjD4QwKskCA2pgZGR/preview" width="640" height="480" allow="autoplay"></iframe>
+                <iframe src="https://drive.google.com/file/d/1QHgdroUNSvh8UGWXZgr-vDEMcQjUbpQ8/preview" width="960" height="540" allow="autoplay"></iframe>
+                <iframe src="https://drive.google.com/file/d/10moVx2ChqLl3K_fAjD4QwKskCA2pgZGR/preview" width="960" height="540" allow="autoplay"></iframe>
     
             </div>
 
