--- a/odyssea.html
+++ b/odyssea.html
@@ -11,6 +11,8 @@
         <script src="https://kit.fontawesome.com/3e81c20759.js" crossorigin="anonymous"></script>
         <!-- my css link-->
         <link rel="stylesheet" type="text/css" href="page_style.css">
+        <!-- animate.css -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 
         <!--font options: https://fonts.google.com/
         https://fonts.google.com/specimen/Nunito-->
@@ -79,7 +81,7 @@
             </p>
 
             <div class="align-center">
-                <iframe src="https://drive.google.com/file/d/1lg4ccZ-yWLIv78H2j134LyhjE80ESIny/preview" width="640" height="480" allow="autoplay"></iframe>
+                <iframe src="https://drive.google.com/file/d/1lg4ccZ-yWLIv78H2j134LyhjE80ESIny/preview" width="960" height="540" allow="autoplay"></iframe>
             </div>
 
             <div class="techn">
