--- a/babel.html
+++ b/babel.html
@@ -11,7 +11,8 @@
         <script src="https://kit.fontawesome.com/3e81c20759.js" crossorigin="anonymous"></script>
         <!-- my css link-->
         <link rel="stylesheet" type="text/css" href="page_style.css">
-
+       <!-- animate.css -->
+       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
         <!--font options: https://fonts.google.com/
         https://fonts.google.com/specimen/Nunito-->
     </head>
