updated Workshop with demo

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div id="about">
                 <p>
                     I graduated from Boston University with a B.A. in Computer Science in May 2023. <br>
-                    A large part of my day is spent clickety-clacketing away at my computer learning and  coding personal projects.  
+                    A large part of my day is spent at my computer learning and coding personal projects.  
                 </p>
 
             
