added color to the demo labels

--- a/workshop.html
+++ b/workshop.html
@@ -68,8 +68,8 @@
                 and streamlines the check-in process via a project dashboard and custom submission form, titled [Workshop]. 
             </p>
             <p>I have completed a prototype of the application deployed with Render.com</p>
-            <p>Demo: <a href="https://workshop-ij3r.onrender.com"> Workshop Home Page</a> <br>
-                Demo - A Project Page:<a href="https://workshop-ij3r.onrender.com/project/65fc5cd7b27e61474e7aca99"> Spring Art Exchange 2024 Sample Page</a></p>
+            <p><span class="isPink">Demo:</span><a href="https://workshop-ij3r.onrender.com"> Workshop Home Page</a> <br>
+                <span class="isPink">Demo - A Project Page:</span><a href="https://workshop-ij3r.onrender.com/project/65fc5cd7b27e61474e7aca99"> Spring Art Exchange 2024 Sample Page</a></p>
 
             <h6 class="desLabel isPink"> Designer & Developer</h6>
             
@@ -109,7 +109,7 @@
             <p>The submission form is for the moderator to share with the participants for the participants to fill out. Once submitted,
                 the participant's progress will be updated in the project page. 
             </p>
-            <p>Demo - Submission Form: <a href="https://workshop-ij3r.onrender.com/form/65fc5cd7b27e61474e7aca99"> Spring Art Exchange 2024 Submission Page</a></p>
+            <p><span class="isPink">Demo - Submission Form: </span><a href="https://workshop-ij3r.onrender.com/form/65fc5cd7b27e61474e7aca99"> Spring Art Exchange 2024 Submission Page</a></p>
             <p>Feel free to submit your progress if you are artist1, artist2, or artist3 and return to the demo project page linked above to see updates. Note that updates may be slow due to Render's free tier.</p>
             <div class = "align-center">
                 <img src="workshop/submissionForm.PNG" alt="submission form" style="width: 700px; height: 400px">
