updated the other projects

--- a/index.html
+++ b/index.html
@@ -87,38 +87,46 @@
                             </div>
                         </div>
                     </a>
-                    <div class="col">
-                        <div class="project card">
-                            <img class="card-img-top project-image" src="giftme/giftmesample.PNG" alt="giftme android app preview">
-                            <div class="card-body">
-                                <p class="card-text">GiftMe!: An Android Wishlist Management App</p>
+                    <a href="giftme.html" class="link-basic">
+                        <div class="col">
+                            <div class="project card">
+                                <img class="card-img-top project-image" src="giftme/giftmesample.PNG" alt="giftme android app preview">
+                                <div class="card-body">
+                                    <p class="card-text">GiftMe!: An Android Wishlist Management App</p>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col">
-                        <div class="project card">
-                            <img class="card-img-top project-image" src="odyssea/odysseaaboutsnip.PNG" alt="custom website preview">
-                            <div class="card-body">
-                                <p class="card-text">Custom Website: A Mock Corporate Website</p>
+                    </a>
+                    <a href="odyssea.html" class="link-basic">
+                        <div class="col">
+                            <div class="project card">
+                                <img class="card-img-top project-image" src="odyssea/odysseaaboutsnip.PNG" alt="custom website preview">
+                                <div class="card-body">
+                                    <p class="card-text">Custom Website: A Mock Corporate Website</p>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col">
-                        <div class="project card">
-                            <img class="card-img-top project-image" src="toyhouse/user_simple.PNG" alt="toyhouse codes preview">
-                            <div class="card-body">
-                                <p class="card-text">User & Character Profile Codes</p>
+                    </a>
+                    <a href="toyhouse.html" class="link-basic">
+                        <div class="col">
+                            <div class="project card">
+                                <img class="card-img-top project-image" src="toyhouse/user_simple.PNG" alt="toyhouse codes preview">
+                                <div class="card-body">
+                                    <p class="card-text">User & Character Profile Codes</p>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col">
-                        <div class="project card">
-                            <img class="card-img-top project-image" src="calculator/calculators_preview.jpg" alt="calculator preview">
-                            <div class="card-body">
-                                <p class="card-text">Calculator</p>
+                    </a>
+                    <a href="calculator.html" class="link-basic">
+                        <div class="col">
+                            <div class="project card">
+                                <img class="card-img-top project-image" src="calculator/calculators_preview.jpg" alt="calculator preview">
+                                <div class="card-body">
+                                    <p class="card-text">Calculator</p>
+                                </div>
                             </div>
                         </div>
-                    </div>
+                    </a>
 
                 </div> <!-- row row-cols div-->
             </div>
