--- a/workshop.html
+++ b/workshop.html
@@ -61,7 +61,7 @@
                         <p class="smaller-text">
                             <!-- demo link -->
                             <a href="https://workshop-ij3r.onrender.com/" class="link-style link-underline">Demo Home Page</a> |
-                            <a href="https://github.com/txcchen" class="link-style link-underline">Demo Project Page</a>
+                            <a href="https://workshop-ij3r.onrender.com/project/65fc5cd7b27e61474e7aca99" class="link-style link-underline">Demo Project Page</a>
 
                             <br>
                             <span class="color-text">Note: please wait a few seconds for Render to start up the backend</span>
