updated with new project

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div id="about">
                 <div class="container my-3">
                     <p class="lead"><span>Hi!</span> I graduated from Boston University with a B.A in Computer Science.
-                        <br> A large part of my day is spent at my computer working on personal projects.
+                        <br> A large part of my day is spent at my computer studying, coding, and enjoying my hobbies.
                     </p>
                     <!-- Skills -->
                     <dl class="row smaller-text" id="skills">
@@ -67,6 +67,16 @@
             <div id="projects" class="container">
                 <!-- to be ordered by most recent - old -->
                 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4">
+                    <a href="idvechoes.html" class="link-basic">
+                        <div class="col">
+                            <div class="project card">
+                                <img class="card-img-top project-image" src="idvechoes/website-sample.PNG" alt="idvechoes simulator preview">
+                                <div class="card-body">
+                                    <p class="card-text">Identity V Recharge Simulator</p>
+                                </div>
+                            </div>
+                        </div>
+                    </a>                    
                     <a href="workshop.html" class="link-basic">
                         <div class="col">
                             <div class="project card">
